--- a/README
+++ b/README
@@ -16,6 +16,7 @@ Viva
 - Friend dialog image on redeem.php
 - Friend invite click through link
 - Canvas is not resizing height on initial load
+- Checkout random prizes that are not
 
 |  3 | S_G Standees                                        | 2010-08-30 06:02:13 |
 |  4 | SVEDKA Shakers                                      | 2010-08-30 06:02:13 |
