--- a/README
+++ b/README
@@ -17,6 +17,8 @@ select p.name, contest_id, win_date, winner_id from prize_schedule ps,prizes p w
 # all contests
 select p.name, contest_id, win_date, winner_id INTO OUTFILE '/tmp/prize_schedule.csv' FIELDS TERMINATED BY ',' OPTIONALLY ENCLOSED BY '"' LINES TERMINATED BY '\n'from prize_schedule ps,prizes p where p.id=ps.prize_id order by win_date;
 
+select p.name, ps.* from prize_schedule ps,prizes p where p.id=ps.prize_id and winner_id is not null order by win_date;
+
 
 Amazon Server
 -------------
