--- a/README
+++ b/README
@@ -19,6 +19,9 @@ select p.name, contest_id, win_date, winner_id INTO OUTFILE '/tmp/prize_schedule
 
 select p.name, ps.* from prize_schedule ps,prizes p where p.id=ps.prize_id and winner_id is not null order by win_date;
 
+select p.name, ps.* INTO OUTFILE '/tmp/winners.csv' FIELDS TERMINATED BY ',' OPTIONALLY ENCLOSED BY '"' LINES TERMINATED BY '\n' from prize_schedule ps,prizes p where p.id=ps.prize_id and winner_id is not null order by win_date;
+
+
 
 Amazon Server
 -------------
